# DownpourRecomp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  downpour_config.toml  downpour_manifest.toml
docs/: chromatic-noise-fix.md  v1.0-dof-investigation.md  v1.0-dxt5-alpha-bug.md  v1.0-known-issues.md  v1.0-performance.md  v1.0-release-overview.md  v1.0-resolution-scale-notes.md
src/: downpour_app.h  downpour_title_update_installer.cpp  downpour_title_update_installer.h  main.cpp
